kubernetes/storage/minio-browser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-browser
  namespace: minio
  labels:
    app: minio-browser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-browser
  template:
    metadata:
      labels:
        app: minio-browser
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: minio-browser
          image: ghcr.io/astrateam-net/minio-browser:1.7.6
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          imagePullPolicy: Always
