kubernetes/storage/minio-browser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-browser-service
  namespace: minio
spec:
  selector:
    app: minio-browser
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      protocol: TCP
  type: ClusterIP
