kubernetes/storage/minio-browser/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-browser-htpt-route
  namespace: minio
  labels:
    app: minio-browser
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
  hostnames:
    - "s3-console.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio-browser-service
          port: 9090
